[package]
name = "cmd"
version = "0.1.0"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/conradludgate/cmd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmd-derive = { path="./cmd-derive", version="0.1.0" }