[package]
name = "cmd-derive"
version = "0.1.0"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/conradludgate/cmd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
boolinator = "2.4"
syn = { version = "1.0", features = ["full"] }